--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
+		"react-loading-skeleton": "^3.3.1",
 		"react-redux": "^8.0.5",
 		"react-router": "^6.11.2",
 		"react-router-dom": "^6.4.4",
