--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
 		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
+		"draft-js": "^0.11.7",
 		"formik": "^2.4.5",
+		"html-to-draftjs": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-draft-wysiwyg": "^1.15.0",
 		"react-dropzone": "^14.2.3",
 		"react-loading-skeleton": "^3.3.1",
 		"react-redux": "^8.0.5",
@@ -44,9 +47,11 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.3.0",
 		"@commitlint/config-conventional": "^17.3.0",
+		"@types/html-to-draftjs": "^1.4.3",
 		"@types/prop-types": "^15",
 		"@types/react": "^18.0.24",
 		"@types/react-dom": "^18.0.8",
+		"@types/react-draft-wysiwyg": "^1.13.7",
 		"@types/react-redux": "^7.1.31",
 		"@vitejs/plugin-react": "^2.2.0",
 		"autoprefixer": "^10.4.13",
