--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
 		"@material-ui/core": "^4.12.4",
+		"@monaco-editor/react": "^4.6.0",
 		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.10.16",
 		"@reduxjs/toolkit": "^1.9.1",
