--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
 		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
+		"@types/prismjs": "^1.26.3",
 		"draft-js": "^0.11.7",
 		"formik": "^2.4.5",
 		"html-to-draftjs": "^1.5.0",
+		"prismjs": "^1.29.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-draft-wysiwyg": "^1.15.0",
@@ -37,6 +39,7 @@
 		"react-redux": "^8.0.5",
 		"react-router": "^6.11.2",
 		"react-router-dom": "^6.4.4",
+		"react-simple-code-editor": "^0.13.1",
 		"react-toastify": "^9.1.1",
 		"redux-thunk": "^2.4.2",
 		"rsuite": "^5.23.0",
