--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@types/prismjs": "^1.26.3",
+		"date-fns": "^3.3.1",
 		"draft-js": "^0.11.7",
 		"formik": "^2.4.5",
 		"html-to-draftjs": "^1.5.0",
@@ -37,6 +38,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-loading-skeleton": "^3.3.1",
 		"react-redux": "^8.0.5",
+		"react-responsive": "^9.0.2",
 		"react-router": "^6.11.2",
 		"react-router-dom": "^6.4.4",
 		"react-simple-code-editor": "^0.13.1",
@@ -44,6 +46,7 @@
 		"redux-thunk": "^2.4.2",
 		"rsuite": "^5.23.0",
 		"rxjs": "^7.8.0",
+		"timeago.js": "^4.0.2",
 		"vite-plugin-require": "^1.1.10",
 		"web-vitals": "^3.1.0",
 		"yup": "^0.32.11"
